# train

./: .env.example  .gitignore  .~lock.dunk-arc-training-plan.xlsx#  .~lock.dunk-peak-training-plan.xlsx#  .~lock.training-plan.xlsx#  AGENTS.md  CLAUDE.md  PRD.md  README.md  SPEC.md  inspo.md  package-lock.json  package.json  plan.md  prd.md  pyproject.toml  tsconfig.json  vercel.json
.claude/agents/: code-reviewer.md  coder.md  product-manager.md  tech-lead.md
app/: agent.py  api.py  bundle_reader.py  config.py  digest_renderer.py  linq.py  modal_app.py  prompts.py  sms_inbox.py  sms_parser.py  sms_session.py  sms_smoke.py  supabase_client.py  webhook.py
app/cli/: cli.ts  train-api.ts
app/cron/: block_retro.py  daily_sender.py  sunday_digest.py
app/scripts/: seed-exercises.sh
athletes/andy/: README.md  nutrition.md
cards/: h-milestone-road.html  i-session-grid.html
cards/previews/: i-session-grid-back-squat-4w.html
docs/: coach-profiles-walkthrough.md  database-schema.md  prd.md  product-roadmap.md  roadmap.md  schema.md  software-factory-workflow.md  supabase-cli-workflow.md  system-architecture.md
docs/design/: coach-profile.md
plans/: README.md
prototypes/: athlete_sheet_andy_wk2.xlsx  athlete_sheet_build.py
scripts/: bootstrap-droplet.sh  deploy-droplet.sh  generate_trainheroic_migration_csvs.py  import_supabase_rest_csv.py  render-milestone-road-card.ts
src/: cli.ts  db.ts  json-envelope.ts  pr-detection.ts  session-state.test.ts  session-state.ts  train-api.session-state.test.ts  train-api.ts
tests/: pr-detection.test.ts
(+416 files in other folders)
